ammended to use this keyword

--- a/public/index.html
+++ b/public/index.html
@@ -72,15 +72,12 @@
           </div>
         </form>
       </section>
-    <div>
-      
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus porttitor arcu ac turpis malesuada, et malesuada ex auctor.
-      Aenean metus lectus, euismod vel facilisis ac, pretium vestibulum ex. Curabitur metus tellus, eleifend eu arcu in, 
-      rutrum imperdiet ipsum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Integer vehicula egestas metus ut 
-      placerat. Aliquam ultricies posuere tristique. Duis quis felis vehicula, suscipit nulla cursus, pretium dolor. 
-      Quisque id magna nec magna iaculis gravida.
-      
-      </div>
+      <!--tweet container-->
+      <article class="tweetArticleContainer">
+        <header class="tweetHeader"><i class="fa-solid fa-user"></i><h3>Jeeves</h3></header>
+        This is where the tweets will go
+        <footer><h5>10 days ago</><i class="fa-solid fa-flag"></i><i class="fa-solid fa-retweet"></i><i class="fa-solid fa-heart"></i></footer>
+      </article>
     </main>
   </body>
 </html>
