--- a/public/index.html
+++ b/public/index.html
@@ -42,9 +42,6 @@
     <!-- Char count js-->
     <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
 
-    <!-- new tweet-->
-    <script type="text/javascript" src="/scripts/newTweet.js"></script>
-
 
   </head>
 
@@ -83,7 +80,9 @@
           </div>
         </form>
       </section>
+      <!-- <section id="tweetList"> -->
       <!-- new tweets will go here-->
+      <!-- </section>  -->
     </main>
   </body>
 </html>
