error message element added using slider function

--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
     <script type="text/javascript" src="/scripts/client.js"></script>
 
     <!-- Char count js-->
-    <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
+    <!-- <script type="text/javascript" src="/scripts/composer-char-counter.js"></script> -->
 
 
   </head>
@@ -71,6 +71,7 @@
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
         <!-- NEW TWEET FORM-->
+        <div class="error-container"></div>
         <form class="tweetForm" id="tweetForm">
           <label for="tweet-text">What are you humming about?</label>
           <textarea name="text" id="tweet-text" ></textarea>
@@ -80,6 +81,7 @@
           </div>
         </form>
       </section>
+
       <!-- <section id="tweetList"> -->
       <!-- new tweets will go here-->
       <!-- </section>  -->
