desktop query working

--- a/public/index.html
+++ b/public/index.html
@@ -47,15 +47,17 @@
 
   <body>
     <!-- Top nav bar (fixed) -->
+
+    
     <nav>
       <span class="navclass">tweeterz</span>
-      <div class="container">
+      <div id="arrowIcon">
         <!-- <span>Write a new tweet</span> -->
         <p>Write a new tweet</p>
         <i class="fa-solid fa-angles-down" style="color: #f50f0f;"></i>
       </div>
     </nav>
-
+  
     <header class="headerContainer">
       <div>
           <img src="/images/profile-hex.png"> 
@@ -64,7 +66,7 @@
       <div>
           <h2>Jeremy Dutton</h2>
       </div>
-  </header>
+    </header>
 
     <!-- Page-specific (main) content here -->
     <main class="mainContainer">
@@ -86,5 +88,6 @@
       <!-- new tweets will go here-->
       <!-- </section>  -->
     </main>
+
   </body>
 </html>
