made adjustment to header sizing in desktop query

--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
 
     
     <nav>
-      <span class="navclass">tweeterz</span>
+      <span class="navclass">xTWEETER</span>
       <div id="arrowIcon">
         <!-- <span>Write a new tweet</span> -->
         <p>Write a new tweet</p>
@@ -63,7 +63,7 @@
           <img src="/images/profile-hex.png"> 
       </div>
       <br>
-      <div>
+      <div id="name">
           <h2>Jeremy Dutton</h2>
       </div>
     </header>
