adjusted tweets to display in reverse chronological order, and added img file and screenshots of app

--- a/public/index.html
+++ b/public/index.html
@@ -83,7 +83,9 @@
           </div>
         </form>
       </section>
+      <div id="tweetList">
 
+      </div>
       <!-- <section id="tweetList"> -->
       <!-- new tweets will go here-->
       <!-- </section>  -->
