fixed error where tweets were duplicating, moved tweet character counting function to a seperate file, and made error message dissapear upon tweet submisison instead of character count

--- a/public/index.html
+++ b/public/index.html
@@ -39,8 +39,8 @@
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
 
-    <!-- Char count js-->
-    <!-- <script type="text/javascript" src="/scripts/composer-char-counter.js"></script> -->
+    <!-- tweet count js-->
+    <script type="text/javascript" src="/scripts/tweetCounter.js"></script>
 
 
   </head>
